# python_template_repository

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  domain-specific-terms.txt  myclass.py  mymodule.py  pyproject.toml  requirements-tests.txt  requirements-type_check.in  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  coverage.yml  dependabot_automerge.yml  dev_test.yml  formatting.yml  no_byte_order_mark.yml  packaging_test.yml  python-publish.yml  pythonlint.yml  typecheck.yml  unittests.yml
dev_requirements/: requirements-coverage.txt  requirements-formatting.txt  requirements-linting.txt  requirements-packaging.in  requirements-packaging.txt  requirements-spell_check.txt  requirements-tests.in  requirements-tests.txt  requirements-type_check.txt
src/mypackage/: __init__.py  mymodule.py
unittests/: .pylintrc  __init__.py  test_myclass.py
