[project]
name = "your-favourite-package-name"
description = "Description of your package"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "your name", email = "your@email.address" }]
keywords = ["your", "important", "keywords"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []     # add all the dependencies here
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3"
]
linting = [
    "pylint==3.3.1"
]
type_check = [
    "mypy==1.13.0"
]
spell_check = [
    "codespell==2.3.0"
]
coverage = [
    "coverage==7.6.4"
]
formatting = [
    "black==24.10.0",
    "isort==5.13.2"
]
packaging = [
    "build==1.2.2.post1",
    "twine==5.1.1"
]
dev = [
    "pip-tools"
]


[project.urls]
Changelog = "https://github.com/Hochfrequenz/python_template_repository/releases"
Homepage = "https://github.com/Hochfrequenz/python_template_repository"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_your_package_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
