# The content of this file is only necessary for python packages
[metadata]
name = your-favourite-package-name
author = your name
author_email = your@email.address
description = short description about your package
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = link to your repository
project_urls =
    Documentation = link to your documentation
    Code = link to your repository
    Bug tracker = link to your bug tracker system
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
license = mit
platforms = any

[options]
# create a src package in the root directory and create there a folder with the name of your package
# into this folder you put your python files
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    # write here line by line the dependencies for your package

[options.packages.find]
where = src
exclude =
    unittests

[options.package_data]
* = py.typed
